Co-authored-by: skoch-neat <skoch-neat@users.noreply.github.com> Co-authored-by: Aksana <Kseny-a@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Invisible Pets Fansite</title>
 </head>
 <body>
   <header>
-
+    <h1>Fansite for Invisible Pets</h1>
   </header>
-  <nav>
+  <main>
     
-  </nav>
+  </main>
   <footer>
-
+    <p>By: &copy;404 Pets Not Found</p>
+    <p>Team members: Aksana, Kristina, Sarah</p>
   </footer>
 </body>
 </html>
