fixed wave 1 index.html, added nav

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <h1>Fansite for Invisible Pets</h1>
   </header>
   <main>
-    
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="/pages/facts.html">Facts</a></li>
+        <li><a href="/pages/gallery.html">Gallery</a></li>
+      </ul>
+    </nav>
   </main>
   <footer>
     <p>By: &copy;404 Pets Not Found</p>
