--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -4,15 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Invisible Pets Fansite</title>
 </head>
 <body>
   <header>
 
   </header>
-  <nav>
-    
-  </nav>
+  
+  <main>
+    <nav>
+      <li><a href="#">Home</a></li>
+      <li><a href="pages/facts.html">Facts</a></li>
+      <li><a href="pages/gallery.html">Gallery</a></li>
+    </nav>
+  </main>
+
   <footer>
 
   </footer>
