facts.html skeleton completed by Aksana, gallery.html skeleton completed by Sarah

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -8,19 +8,41 @@
 </head>
 <body>
   <header>
-
+    <h1>Invisible Pet Gallery</h1>
+    <p>Explore photos and artwork of our beloved invisible pets!</p>
   </header>
   
   <main>
     <nav>
-      <li><a href="#">Home</a></li>
-      <li><a href="pages/facts.html">Facts</a></li>
-      <li><a href="pages/gallery.html">Gallery</a></li>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pages/facts.html">Facts</a></li>
+        <li><a href="#">Gallery</a></li>
+      </ul>
     </nav>
+
+    <section>
+      <h1>Invisible Pet Gallery</h1>
+      <figure>
+        <img src="some_image1.jpg" alt="First invisible pet un-sighting">
+        <figcaption>Invisible pet name, type of pet. Photo credit: <a href="#"></a></figcaption>
+      </figure>
+
+      <figure>
+        <img src="some_image2.jpg" alt="Second invisible pet un-sighting">
+        <figcaption>Invisible pet name, type of pet. Artwork by: <a href="#"></a></figcaption>
+      </figure>
+
+      <figure>
+        <img src="some_image3.jpg" alt="Third invisible pet un-sighting">
+        <figcaption>Invisible pet name, type of pet. Photo credit: <a href="#"></a></figcaption>
+      </figure>
+    </section>
   </main>
 
   <footer>
-
+    <p>By: &copy;404 Pets Not Found</p>
+    <p>Team members: Aksana, Kristina, Sarah</p>
   </footer>
 </body>
 </html>
