--- a/pages/facts.html
+++ b/pages/facts.html
@@ -7,6 +7,31 @@
   <title>Document</title>
 </head>
 <body>
+  <header></header>
+  <main>
+    <nav>
+      <ul>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="#">Facts</a></li>
+        <li><a href="/pages/gallery.html">Gallery</a></li>
+      </ul>
+    </nav>
+    <section>
+      <h1>Fun facts:</h1>
+      <p>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </p>
+    </section>
+
+  </main>
+<footer>
+  <p>By: &copy;404 Pets Not Found</p>
+  <p>Team members: Aksana, Kristina, Sarah</p>
+</footer>
   
 </body>
 </html>
