Added images for Gallery. Updated links for Home and Facts from Gallery. Updated image placeholders with URLs, alt text, captions, and credits.

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -15,27 +15,27 @@
   <main>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="pages/facts.html">Facts</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/pages/facts.html">Facts</a></li>
         <li><a href="#">Gallery</a></li>
       </ul>
     </nav>
 
     <section>
-      <h1>Invisible Pet Gallery</h1>
+      <h2>Invisible Pets of the Week</h2>
       <figure>
-        <img src="some_image1.jpg" alt="First invisible pet un-sighting">
-        <figcaption>Invisible pet name, type of pet. Photo credit: <a href="#"></a></figcaption>
+        <img src="/images/invisible-pet_1.jpg" alt="Sir Nix-A-Lot, a chameleon, rests invisibly on a branch in the rainforest" width="800">
+        <figcaption>Sir Nix-A-Lot (chameleon). Photo credit: Sarah K.</figcaption>
       </figure>
 
       <figure>
-        <img src="some_image2.jpg" alt="Second invisible pet un-sighting">
-        <figcaption>Invisible pet name, type of pet. Artwork by: <a href="#"></a></figcaption>
+        <img src="/images/invisible-pet_2.jpg" alt="Artwork by Beatrix K. and Daniel K. depicting Papa's wish to see Beatrix's invisible pets." width="800">
+        <figcaption>"Papa's Wish to See the Unseen," (multiple species). Artwork by Beatrix K. and Daniel K.</figcaption>
       </figure>
 
       <figure>
-        <img src="some_image3.jpg" alt="Third invisible pet un-sighting">
-        <figcaption>Invisible pet name, type of pet. Photo credit: <a href="#"></a></figcaption>
+        <img src="/images/invisible-pet_3.jpg" alt="Maine Coon cat Mewdini relaxes at the beach, enjoying a quiet moment unseen." width="800">
+        <figcaption>Mewdini (Maine Coon cat). Photo credit: Sarah K.</figcaption>
       </figure>
     </section>
   </main>
