added extra assets for webpage

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </header>
   <main>
     <nav>
+      <img src="assets/pets_outline.jpg"/>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="/pages/facts.html">Facts</a></li>
