added brief description to homepage

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <body>
   <header>
     <h1>Fansite for Invisible Pets</h1>
-  </header>
-  <main>
     <nav>
       <img src="assets/pets_outline.jpg"/>
       <ul>
@@ -19,6 +17,9 @@
         <li><a href="/pages/gallery.html">Gallery</a></li>
       </ul>
     </nav>
+  </header>
+  <main>
+    <p>Dive into the whimsical world of Invisible Pets, where the unseen becomes extraordinary! Join our community of devoted pet owners and enthusiasts as we explore the joys and mysteries of caring for these elusive companions. From sharing heartwarming stories and helpful tips to discussing the latest theories on their invisible antics, our fansite is the ultimate destination for all things invisible. So, grab a virtual leash and let's embark on this paw-sitively puzzling adventure together!</p>
   </main>
   <footer>
     <p>By: &copy;404 Pets Not Found</p>
