Created and added links to baseline CSS stylesheet and added CSS stylesheets for Index, Facts, and Gallery. Added link to Google Fonts in Index, Gallery, and Facts.
Added baseline CSS styling:
h1-h4: modified font and text color.
body: background color, left and right margins established, text aligned to center.
li: inline display, left and right padding between elements.
footer: height, top and bottom margins established.

Changed index banner image and added custom width to Index CSS. Moved nav element outside of main in Facts and Gallery. Added nav element to footer of Gallery and modified copyright message.

Co-authored-by: Kristina N <kstinanguyen@users.noreply.github.com>
Co-authored-by: Aksana <Kseny-a@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Invisible Pets Fansite</title>
+  <link href="styles/style.css" rel="stylesheet">
+  <link href="styles/index.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Barrio&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
     <h1>Fansite for Invisible Pets</h1>
     <nav>
-      <img src="assets/pets_outline.jpg"/>
+      <img id="banner_img" src="assets/shutterstock_transparent_img.png"/>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="/pages/facts.html">Facts</a></li>
