--- a/pages/facts.html
+++ b/pages/facts.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="/styles/style.css" rel="stylesheet">
+  <link href="/styles/facts.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Barrio&display=swap" rel="stylesheet">
 </head>
+
 <body>
+
   <header></header>
+
+  <nav>
+    <ul>
+      <li><a href="/index.html">Home</a></li>
+      <li><a href="#">Facts</a></li>
+      <li><a href="/pages/gallery.html">Gallery</a></li>
+    </ul>
+  </nav>
+
   <main>
-    <nav>
-      <ul>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="#">Facts</a></li>
-        <li><a href="/pages/gallery.html">Gallery</a></li>
-      </ul>
-    </nav>
     <section>
       <h1>Fun facts:</h1>
       <ul>
@@ -24,8 +32,8 @@
         <li></li>
       </ul>
     </section>
-
   </main>
+
 <footer>
   <p>By: &copy;404 Pets Not Found</p>
   <p>Team members: Aksana, Kristina, Sarah</p>
