--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -5,21 +5,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Invisible Pets Fansite</title>
+  <link href="/styles/style.css" rel="stylesheet">
+  <link href="/styles/gallery.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Barrio&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header>
     <h1>Invisible Pet Gallery</h1>
-    <p>Explore photos and artwork of our beloved invisible pets!</p>
+    <h4>Explore photos and artwork of our beloved invisible pets!</h4>
   </header>
+
+  <nav>
+    <ul>
+      <li class="link"><a href="/index.html">Home</a></li>
+      <li class="link"><a href="/pages/facts.html">Facts</a></li>
+      <li class="link"><a href="#">Gallery</a></li>
+    </ul>
+  </nav>
   
   <main>
-    <nav>
-      <ul>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/pages/facts.html">Facts</a></li>
-        <li><a href="#">Gallery</a></li>
-      </ul>
-    </nav>
 
     <section>
       <h2>Invisible Pets of the Week</h2>
@@ -41,7 +46,15 @@
   </main>
 
   <footer>
-    <p>By: &copy;404 Pets Not Found</p>
+    <nav>
+      <ul>
+        <li class="link"><a href="/index.html">Home</a></li>
+        <li class="link"><a href="/pages/facts.html">Facts</a></li>
+        <li class="link"><a href="#">Gallery</a></li>
+      </ul>
+    </nav>
+
+    <p>&copy;404 Pets Not Found</p>
     <p>Team members: Aksana, Kristina, Sarah</p>
   </footer>
 </body>
