added text to facts page

--- a/pages/facts.html
+++ b/pages/facts.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link href="/styles/style.css" rel="stylesheet">
-  <link href="/styles/facts.css" rel="stylesheet">
+  <link href="../styles/style.css" rel="stylesheet">
+  <link href="../styles/facts.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Barrio&display=swap" rel="stylesheet">
 </head>
 
@@ -15,23 +15,34 @@
 
   <header></header>
 
-  <nav>
-    <ul>
-      <li><a href="/index.html">Home</a></li>
-      <li><a href="#">Facts</a></li>
-      <li><a href="/pages/gallery.html">Gallery</a></li>
-    </ul>
-  </nav>
-
   <main>
     <section>
-      <h1>Fun facts:</h1>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+      <h1>Fun facts</h1>
+        <h4>What Are Invisible Pets? </h4>
+        <ul>
+          <li>Invisible pets are companions you can't see but can feel! They’re perfect for anyone with a wild imagination who’s ready to adopt a one-of-a-kind, low-maintenance friend. They can be anything: invisible dogs, cats, dragons, or even something entirely unique to the owner.</li>
+          <li>Invisible pets don’t shed, bark, meow, or require a litter box!</li>
+        </ul>
+        <h4>Meet Our Most Popular Breeds </h4>
+        <ul>
+          <li>Phantomo Cats: Known for their silent purrs, they keep you company without knocking things over.</li>
+          <li>Breezy Beagles: Experts at invisible fetch games, and known for sniffing out imaginary treats.</li>
+          <li>Cloud Dragons: They hover near you like a soft breeze and love to "breathe" invisible fire.</li>
+        </ul>
+        <h4>Invisible Pet Care 101</h4>
+          <ul>
+            <li>Feeding: Invisible pets have refined tastes, but fortunately, they love imaginary food! Just pretend to pour it out, and they’ll be thrilled.</li>
+            <li>Exercise: Invisible dogs love long, pretend walks, while invisible cats enjoy imaginary sunbeams. </li>
+            <li>Bathing: Baths are easy—just pretend to wash them, and they’ll be clean in no time!</li>
+          </ul>
     </section>
+    <nav>
+      <ul>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="#">Facts</a></li>
+        <li><a href="/pages/gallery.html">Gallery</a></li>
+      </ul>
+    </nav>
   </main>
 
 <footer>
