added buttons to the facts page

--- a/pages/facts.html
+++ b/pages/facts.html
@@ -18,18 +18,18 @@
   <main>
     <section>
       <h1>Fun facts</h1>
-        <h4>What Are Invisible Pets? </h4>
+        <h3>What Are Invisible Pets? </h3>
         <ul>
           <li class="list-facts">Invisible pets are companions you can't see but can feel! They’re perfect for anyone with a wild imagination who’s ready to adopt a one-of-a-kind, low-maintenance friend. They can be anything: invisible dogs, cats, dragons, or even something entirely unique to the owner.</li>
           <li class="list-facts">Invisible pets don’t shed, bark, meow, or require a litter box!</li>
         </ul>
-        <h4>Meet Our Most Popular Breeds </h4>
+        <h3>Meet Our Most Popular Breeds </h3>
         <ul>
           <li class="list-facts">Phantomo Cats: Known for their silent purrs, they keep you company without knocking things over.</li>
           <li class="list-facts">Breezy Beagles: Experts at invisible fetch games, and known for sniffing out imaginary treats.</li>
           <li class="list-facts">Cloud Dragons: They hover near you like a soft breeze and love to "breathe" invisible fire.</li>
         </ul>
-        <h4>Invisible Pet Care 101</h4>
+        <h3>Invisible Pet Care 101</h3>
           <ul>
             <li class="list-facts">Feeding: Invisible pets have refined tastes, but fortunately, they love imaginary food! Just pretend to pour it out, and they’ll be thrilled.</li>
             <li class="list-facts">Exercise: Invisible dogs love long, pretend walks, while invisible cats enjoy imaginary sunbeams. </li>
@@ -38,9 +38,9 @@
     </section>
     <nav>
       <ul>
-        <li class="navigation"><a href="/index.html">Home</a></li>
-        <li class="navigation"><a href="#">Facts</a></li>
-        <li class="navigation"><a href="/pages/gallery.html">Gallery</a></li>
+        <li class="navigation"><a class="button-1" role="button" href="/index.html">Home</a></li>
+        <li class="navigation"><a class="button-1" role="button" href="#">Facts</a></li>
+        <li class="navigation"><a class="button-1" role="button" href="/pages/gallery.html">Gallery</a></li>
       </ul>
     </nav>
   </main>
