--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -7,37 +7,37 @@
   <title>Invisible Pets Fansite</title>
   <link href="/styles/style.css" rel="stylesheet">
   <link href="/styles/gallery.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Barrio&display=swap" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/open-dyslexic" rel="stylesheet">
 </head>
 
 <body>
   <header>
+    <nav class="btn-container">
+      <div class="box">
+        <a href="/index.html" class="btn"><span>Home</span></a>
+      </div>
+      <div class="box">
+        <a href="/pages/facts.html" class="btn"><span>Facts</span></a>
+      </div>
+      <div class="box">
+        <a href="#" class="btn"><span>Gallery</span></a>
+      </div>
+    </nav>
     <h1>Invisible Pet Gallery</h1>
     <h4>Explore photos and artwork of our beloved invisible pets!</h4>
   </header>
-
-  <nav>
-    <ul>
-      <li class="link"><a href="/index.html">Home</a></li>
-      <li class="link"><a href="/pages/facts.html">Facts</a></li>
-      <li class="link"><a href="#">Gallery</a></li>
-    </ul>
-  </nav>
   
   <main>
-
     <section>
       <h2>Invisible Pets of the Week</h2>
       <figure>
         <img src="/images/invisible-pet_1.jpg" alt="Sir Nix-A-Lot, a chameleon, rests invisibly on a branch in the rainforest" width="800">
         <figcaption>Sir Nix-A-Lot (chameleon). Photo credit: Sarah K.</figcaption>
       </figure>
-
       <figure>
         <img src="/images/invisible-pet_2.jpg" alt="Artwork by Beatrix K. and Daniel K. depicting Papa's wish to see Beatrix's invisible pets." width="800">
-        <figcaption>"Papa's Wish to See the Unseen," (multiple species). Artwork by Beatrix K. and Daniel K.</figcaption>
+        <figcaption>"Papa Sees the Unseen," (multiple species). Artwork by Beatrix K. and Daniel K.</figcaption>
       </figure>
-
       <figure>
         <img src="/images/invisible-pet_3.jpg" alt="Maine Coon cat Mewdini relaxes at the beach, enjoying a quiet moment unseen." width="800">
         <figcaption>Mewdini (Maine Coon cat). Photo credit: Sarah K.</figcaption>
@@ -46,16 +46,20 @@
   </main>
 
   <footer>
-    <nav>
-      <ul>
-        <li class="link"><a href="/index.html">Home</a></li>
-        <li class="link"><a href="/pages/facts.html">Facts</a></li>
-        <li class="link"><a href="#">Gallery</a></li>
-      </ul>
+    <nav class="btn-container">
+      <div class="box">
+        <a href="/index.html" class="btn"><span>Home</span></a>
+      </div>
+      <div class="box">
+        <a href="/pages/facts.html" class="btn"><span>Facts</span></a>
+      </div>
+      <div class="box">
+        <a href="#" class="btn"><span>Gallery</span></a>
+      </div>
     </nav>
-
     <p>&copy;404 Pets Not Found</p>
     <p>Team members: Aksana, Kristina, Sarah</p>
   </footer>
+
 </body>
 </html>
