Moved Gallery to a grid layout. Updated stylesheet to overwrite baseline. Added surprise audio treat to the Gallery page. Modified main Gallery section to display figure columns horizontally, scrolling instead of wrapping to a new line. Removed lower nav section due to change in page layout.
Co-authored-by: Kristina N <kstinanguyen@users.noreply.github.com>
Co-authored-by: Aksana <Kseny-a@users.noreply.github.com>

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -11,55 +11,51 @@
 </head>
 
 <body>
-  <header>
-    <nav class="btn-container">
-      <div class="box">
-        <a href="/index.html" class="btn"><span>Home</span></a>
-      </div>
-      <div class="box">
-        <a href="/pages/facts.html" class="btn"><span>Facts</span></a>
-      </div>
-      <div class="box">
-        <a href="#" class="btn"><span>Gallery</span></a>
-      </div>
-    </nav>
-    <h1>Invisible Pet Gallery</h1>
-    <h4>Explore photos and artwork of our beloved invisible pets!</h4>
-  </header>
-  
-  <main>
-    <section>
-      <h2>Invisible Pets of the Week</h2>
-      <figure>
-        <img src="/images/invisible-pet_1.jpg" alt="Sir Nix-A-Lot, a chameleon, rests invisibly on a branch in the rainforest" width="800">
-        <figcaption>Sir Nix-A-Lot (chameleon). Photo credit: Sarah K.</figcaption>
-      </figure>
-      <figure>
-        <img src="/images/invisible-pet_2.jpg" alt="Artwork by Beatrix K. and Daniel K. depicting Papa's wish to see Beatrix's invisible pets." width="800">
-        <figcaption>"Papa Sees the Unseen," (multiple species). Artwork by Beatrix K. and Daniel K.</figcaption>
-      </figure>
-      <figure>
-        <img src="/images/invisible-pet_3.jpg" alt="Maine Coon cat Mewdini relaxes at the beach, enjoying a quiet moment unseen." width="800">
-        <figcaption>Mewdini (Maine Coon cat). Photo credit: Sarah K.</figcaption>
-      </figure>
-    </section>
-  </main>
+    <div class="grid-container">
+        <header>
+            <nav class="btn-container">
+                <div class="box">
+                    <a href="/index.html" class="btn"><span>Home</span></a>
+                </div>
+                <div class="box">
+                    <a href="/pages/facts.html" class="btn"><span>Facts</span></a>
+                </div>
+                <div class="box">
+                    <a href="#" class="btn"><span>Gallery</span></a>
+                </div>
+            </nav>
+            <h1>Invisible Pet Gallery</h1>
+            <p class="subtitle">Explore photos and artwork of our beloved invisible pets!</p>
+        </header>
+        
+        <main>
+            <section>
+            <h2>Invisible Pets of the Week</h2>
+            <div class="figure-container">
+                <figure class="figure-column">
+                    <img src="/images/invisible-pet_1.jpg" alt="Sir Nix-A-Lot, a chameleon, rests invisibly on a branch in the rainforest">
+                    <figcaption>Sir Nix-A-Lot (chameleon). Photo credit: Sarah K.</figcaption>
+                </figure>
+                <figure class="figure-column">
+                    <img src="/images/invisible-pet_2.jpg" alt="Artwork by Beatrix K. and Daniel K. depicting Papa's wish to see Beatrix's invisible pets.">
+                    <figcaption>"Papa Sees the Unseen," (multiple species). Artwork by Beatrix K. and Daniel K.</figcaption>
+                </figure>
+                <figure class="figure-column">
+                    <img src="/images/invisible-pet_3.jpg" alt="Maine Coon cat Mewdini relaxes at the beach, enjoying a quiet moment unseen.">
+                    <figcaption>Mewdini (Maine Coon cat). Photo credit: Sarah K.</figcaption>
+                </figure>
+            </div>
+            </section>
+        </main>
 
-  <footer>
-    <nav class="btn-container">
-      <div class="box">
-        <a href="/index.html" class="btn"><span>Home</span></a>
-      </div>
-      <div class="box">
-        <a href="/pages/facts.html" class="btn"><span>Facts</span></a>
-      </div>
-      <div class="box">
-        <a href="#" class="btn"><span>Gallery</span></a>
-      </div>
-    </nav>
-    <p>&copy;404 Pets Not Found</p>
-    <p>Team members: Aksana, Kristina, Sarah</p>
-  </footer>
+        <footer>
+            <p>&copy;404 Pets Not Found</p>
+            <p>Team members: Aksana, Kristina, Sarah</p>
+            <audio controls autoplay>
+                <source src="/assets/DogMIDI.mp3" type="audio/mp3">
+            </audio>
+        </footer>
 
+    </div>
 </body>
 </html>
