Modified elements in Index to account for changes made to baseline stylesheet.

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       </div>
     </nav>
     <h1>Fansite for Invisible Pets</h1>
-    <img id="banner_img" src="assets/shutterstock_transparent_img.png" alt="Banner featuring silhouettes of various domesticated animals, including a horse, dog, and bird, set against a neutral background.">
   </header>
   <main>
-    <div class="paw-container">
+    <img id="banner_img" src="assets/shutterstock_transparent_img.png" alt="Banner featuring silhouettes of various domesticated animals, including a horse, dog, and bird, set against a neutral background.">
+    <div class="flex-container">
       <p>Dive into the whimsical world of Invisible Pets, where the unseen becomes extraordinary! Join our community of devoted pet owners and enthusiasts as we explore the joys and mysteries of caring for these elusive companions. From sharing heartwarming stories and helpful tips to discussing the latest theories on their invisible antics, our fansite is the ultimate destination for all things invisible. So, grab a virtual leash and let's embark on this paw-sitively puzzling adventure together!</p>
     </div>
   </main>
