Moved navigation in Facts from main to header. Updated Facts font link from previous font to current. Modified headings for Facts section. Removed extra verbiage in Facts footer to make copyright consistent across all pages.

--- a/pages/facts.html
+++ b/pages/facts.html
@@ -8,47 +8,52 @@
   <title>Document</title>
   <link href="../styles/style.css" rel="stylesheet">
   <link href="../styles/facts.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Barrio&display=swap" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/open-dyslexic" rel="stylesheet">
 </head>
 
-<body>
+<body class="container">
 
-  <header></header>
+  <header>
+    <nav class="btn-container">
+      <div class="box">
+        <a href="/index.html" class="btn"><span>Home</span></a>
+      </div>
+      <div class="box">
+        <a href="#" class="btn"><span>Facts</span></a>
+      </div>
+      <div class="box">
+        <a href="/pages/gallery.html" class="btn"><span>Gallery</span></a>
+      </div>
+    </nav>
+    <h1>Fun facts</h1>
+  </header>
 
   <main>
     <section>
-      <h1>Fun facts</h1>
-        <h3>What Are Invisible Pets? </h3>
-        <ul>
-          <li class="list-facts">Invisible pets are companions you can't see but can feel! They’re perfect for anyone with a wild imagination who’s ready to adopt a one-of-a-kind, low-maintenance friend. They can be anything: invisible dogs, cats, dragons, or even something entirely unique to the owner.</li>
-          <li class="list-facts">Invisible pets don’t shed, bark, meow, or require a litter box!</li>
-        </ul>
-        <h3>Meet Our Most Popular Breeds </h3>
-        <ul>
-          <li class="list-facts">Phantomo Cats: Known for their silent purrs, they keep you company without knocking things over.</li>
-          <li class="list-facts">Breezy Beagles: Experts at invisible fetch games, and known for sniffing out imaginary treats.</li>
-          <li class="list-facts">Cloud Dragons: They hover near you like a soft breeze and love to "breathe" invisible fire.</li>
-        </ul>
-        <h3>Invisible Pet Care 101</h3>
-          <ul>
-            <li class="list-facts">Feeding: Invisible pets have refined tastes, but fortunately, they love imaginary food! Just pretend to pour it out, and they’ll be thrilled.</li>
-            <li class="list-facts">Exercise: Invisible dogs love long, pretend walks, while invisible cats enjoy imaginary sunbeams. </li>
-            <li class="list-facts">Bathing: Baths are easy—just pretend to wash them, and they’ll be clean in no time!</li>
-          </ul>
-    </section>
-    <nav>
+        <h2>What Are Invisible Pets? </h2>
       <ul>
-        <li class="navigation"><a class="button-1" role="button" href="/index.html">Home</a></li>
-        <li class="navigation"><a class="button-1" role="button" href="#">Facts</a></li>
-        <li class="navigation"><a class="button-1" role="button" href="/pages/gallery.html">Gallery</a></li>
+        <li class="list-facts">Invisible pets are companions you can't see but can feel! They’re perfect for anyone with a wild imagination who’s ready to adopt a one-of-a-kind, low-maintenance friend. They can be anything: invisible dogs, cats, dragons, or even something entirely unique to the owner.</li>
+        <li class="list-facts">Invisible pets don’t shed, bark, meow, or require a litter box!</li>
       </ul>
-    </nav>
+      <h2>Meet Our Most Popular Breeds </h2>
+      <ul>
+        <li class="list-facts">Phantomo Cats: Known for their silent purrs, they keep you company without knocking things over.</li>
+        <li class="list-facts">Breezy Beagles: Experts at invisible fetch games, and known for sniffing out imaginary treats.</li>
+        <li class="list-facts">Cloud Dragons: They hover near you like a soft breeze and love to "breathe" invisible fire.</li>
+      </ul>
+      <h2>Invisible Pet Care 101</h2>
+      <ul>
+        <li class="list-facts">Feeding: Invisible pets have refined tastes, but fortunately, they love imaginary food! Just pretend to pour it out, and they’ll be thrilled.</li>
+        <li class="list-facts">Exercise: Invisible dogs love long, pretend walks, while invisible cats enjoy imaginary sunbeams. </li>
+        <li class="list-facts">Bathing: Baths are easy—just pretend to wash them, and they’ll be clean in no time!</li>
+      </ul>
+    </section>
   </main>
 
-<footer>
-  <p>By: &copy;404 Pets Not Found</p>
-  <p>Team members: Aksana, Kristina, Sarah</p>
-</footer>
+  <footer>
+    <p>&copy;404 Pets Not Found</p>
+    <p>Team members: Aksana, Kristina, Sarah</p>
+  </footer>
   
 </body>
 </html>
