added highlighted text on facts page, added padding above  the footer

--- a/pages/facts.html
+++ b/pages/facts.html
@@ -37,15 +37,15 @@
       </ul>
       <h2>Meet Our Most Popular Breeds </h2>
       <ul>
-        <li class="list-facts">Phantomo Cats: Known for their silent purrs, they keep you company without knocking things over.</li>
-        <li class="list-facts">Breezy Beagles: Experts at invisible fetch games, and known for sniffing out imaginary treats.</li>
-        <li class="list-facts">Cloud Dragons: They hover near you like a soft breeze and love to "breathe" invisible fire.</li>
+        <li class="list-facts"><span class="text-facts">Phantomo Cats:</span> Known for their silent purrs, they keep you company without knocking things over.</li>
+        <li class="list-facts"><span class="text-facts">Breezy Beagles:</span> Experts at invisible fetch games, and known for sniffing out imaginary treats.</li>
+        <li class="list-facts"><span class="text-facts">Cloud Dragons:</span> They hover near you like a soft breeze and love to "breathe" invisible fire.</li>
       </ul>
       <h2>Invisible Pet Care 101</h2>
       <ul>
-        <li class="list-facts">Feeding: Invisible pets have refined tastes, but fortunately, they love imaginary food! Just pretend to pour it out, and they’ll be thrilled.</li>
-        <li class="list-facts">Exercise: Invisible dogs love long, pretend walks, while invisible cats enjoy imaginary sunbeams. </li>
-        <li class="list-facts">Bathing: Baths are easy—just pretend to wash them, and they’ll be clean in no time!</li>
+        <li class="list-facts"><span class="text-facts">Feeding:</span> Invisible pets have refined tastes, but fortunately, they love imaginary food! Just pretend to pour it out, and they’ll be thrilled.</li>
+        <li class="list-facts"><span class="text-facts">Exercise:</span> Invisible dogs love long, pretend walks, while invisible cats enjoy imaginary sunbeams. </li>
+        <li class="list-facts"><span class="text-facts">Bathing:</span> Baths are easy—just pretend to wash them, and they’ll be clean in no time!</li>
       </ul>
     </section>
   </main>
