--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -13,17 +13,19 @@
 <body>
     <div class="grid-container">
         <header>
-            <nav class="btn-container">
-                <div class="box">
-                    <a href="/index.html" class="btn"><span>Home</span></a>
-                </div>
-                <div class="box">
-                    <a href="/pages/facts.html" class="btn"><span>Facts</span></a>
-                </div>
-                <div class="box">
-                    <a href="#" class="btn"><span>Gallery</span></a>
-                </div>
-            </nav>
+            <div>
+                <nav class="btn-container">
+                    <div class="box">
+                        <a href="/index.html" class="btn"><span>Home</span></a>
+                    </div>
+                    <div class="box">
+                        <a href="/pages/facts.html" class="btn"><span>Facts</span></a>
+                    </div>
+                    <div class="box">
+                        <a href="#" class="btn"><span>Gallery</span></a>
+                    </div>
+                </nav>
+            </div>
             <h1>Invisible Pet Gallery</h1>
             <p class="subtitle">Explore photos and artwork of our beloved invisible pets!</p>
         </header>
@@ -51,7 +53,7 @@
         <footer>
             <p>&copy;404 Pets Not Found</p>
             <p>Team members: Aksana, Kristina, Sarah</p>
-            <audio controls autoplay>
+            <audio controls autoplay aria-label="Dogsong from Undertale (MIDI style)">
                 <source src="/assets/DogMIDI.mp3" type="audio/mp3">
             </audio>
         </footer>
